--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ie > 9"
   ],
   "scripts": {
-    "start": "webpack --config webpack.config.js",
+    "serve": "webpack --config webpack.config.js",
     "build": "webpack -p"
   },
   "author": "",
@@ -18,7 +18,6 @@
     "clean-webpack-plugin": "^0.1.17",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
-    "flickity": "^2.0.10",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.6.0",
